--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import "./AnswerInput/AnswerInput.css";
 @import "./App/App.css";
 @import "./Button/Button.css";
+@import "./Question/Question.css";
 @import "./Quiz/Quiz.css";
+@import "./Summary/Summary.css";
+@import "./Title/Title.css";
